--- a/slides/01-intro/intro.html
+++ b/slides/01-intro/intro.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Dr. Jin Zhou @ UCLA">
-<meta name="dcterms.date" content="2025-03-31">
+<meta name="dcterms.date" content="2025-04-01">
 
 <title>Course Introduction</title>
 <style>
@@ -3191,9 +3191,18 @@ window.Quarto = {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#course-webpages" id="toc-course-webpages" class="nav-link active" data-scroll-target="#course-webpages"><span class="header-section-number">1</span> Course webpages</a></li>
-  <li><a href="#whats-this-course-about" id="toc-whats-this-course-about" class="nav-link" data-scroll-target="#whats-this-course-about"><span class="header-section-number">2</span> What’s this course about?</a></li>
-  <li><a href="#course-description" id="toc-course-description" class="nav-link" data-scroll-target="#course-description"><span class="header-section-number">3</span> Course description</a></li>
+  <li><a href="#brief-intro" id="toc-brief-intro" class="nav-link active" data-scroll-target="#brief-intro"><span class="header-section-number">1</span> Brief intro</a>
+  <ul>
+  <li><a href="#myself" id="toc-myself" class="nav-link" data-scroll-target="#myself"><span class="header-section-number">1.1</span> Myself</a>
+  <ul class="collapse">
+  <li><a href="#before-2021" id="toc-before-2021" class="nav-link" data-scroll-target="#before-2021"><span class="header-section-number">1.1.1</span> Before 2021</a></li>
+  <li><a href="#present" id="toc-present" class="nav-link" data-scroll-target="#present"><span class="header-section-number">1.1.2</span> 2021 - Present</a></li>
+  </ul></li>
+  <li><a href="#you" id="toc-you" class="nav-link" data-scroll-target="#you"><span class="header-section-number">1.2</span> You?</a></li>
+  </ul></li>
+  <li><a href="#course-webpages" id="toc-course-webpages" class="nav-link" data-scroll-target="#course-webpages"><span class="header-section-number">2</span> Course webpages</a></li>
+  <li><a href="#whats-this-course-about" id="toc-whats-this-course-about" class="nav-link" data-scroll-target="#whats-this-course-about"><span class="header-section-number">3</span> What’s this course about?</a></li>
+  <li><a href="#course-description" id="toc-course-description" class="nav-link" data-scroll-target="#course-description"><span class="header-section-number">4</span> Course description</a></li>
   </ul>
 </nav>
 </div>
@@ -3221,7 +3230,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">March 31, 2025</p>
+      <p class="date">April 1, 2025</p>
     </div>
   </div>
   
@@ -3233,8 +3242,48 @@ window.Quarto = {
 </header>
 
 
-<section id="course-webpages" class="level2" data-number="1">
-<h2 data-number="1" class="anchored" data-anchor-id="course-webpages"><span class="header-section-number">1</span> Course webpages</h2>
+<section id="brief-intro" class="level2" data-number="1">
+<h2 data-number="1" class="anchored" data-anchor-id="brief-intro"><span class="header-section-number">1</span> Brief intro</h2>
+<section id="myself" class="level3" data-number="1.1">
+<h3 data-number="1.1" class="anchored" data-anchor-id="myself"><span class="header-section-number">1.1</span> Myself</h3>
+<section id="before-2021" class="level4" data-number="1.1.1">
+<h4 data-number="1.1.1" class="anchored" data-anchor-id="before-2021"><span class="header-section-number">1.1.1</span> Before 2021</h4>
+<ul>
+<li>PhD in Biomathematics, UCLA (the department was renamed to <a href="https://compmed.ucla.edu/">“UCLA Computational Medicine”</a>)</li>
+<li>Postdoc &amp; Statistician, Harvard University
+<ul>
+<li>Department of Biostatistics</li>
+<li>Channing’s Lab, Brigham and Women’s Hospital</li>
+</ul></li>
+<li>Assistant &amp; Associate professor, University of Arizona (UofA)
+<ul>
+<li>Department of Epidemiology and Biostatistics</li>
+<li>Statistics and Genetics Graduate Interdisciplinary Program (GIDP)</li>
+</ul></li>
+<li>Adjunct Associate Professor, UCLA
+<ul>
+<li>Department of Medicine Statistics Core (DOMStat)</li>
+</ul></li>
+</ul>
+</section>
+<section id="present" class="level4" data-number="1.1.2">
+<h4 data-number="1.1.2" class="anchored" data-anchor-id="present"><span class="header-section-number">1.1.2</span> 2021 - Present</h4>
+<ul>
+<li>Research principal investigator, Phoenix VA Health Care System</li>
+<li>Research principal investigator, Greater Los Angeles VA Health Care System</li>
+<li>Associate Professor-in-Residence of Biostatistics, UCLA
+<ul>
+<li>Department of Biostatistics</li>
+</ul></li>
+</ul>
+</section>
+</section>
+<section id="you" class="level3" data-number="1.2">
+<h3 data-number="1.2" class="anchored" data-anchor-id="you"><span class="header-section-number">1.2</span> You?</h3>
+</section>
+</section>
+<section id="course-webpages" class="level2" data-number="2">
+<h2 data-number="2" class="anchored" data-anchor-id="course-webpages"><span class="header-section-number">2</span> Course webpages</h2>
 <ul>
 <li>Github site: <a href="https://ucla-biostat-200c.github.io/2025spring/" class="uri">https://ucla-biostat-200c.github.io/2025spring/</a>
 <ul>
@@ -3246,8 +3295,8 @@ window.Quarto = {
 </ul></li>
 </ul>
 </section>
-<section id="whats-this-course-about" class="level2" data-number="2">
-<h2 data-number="2" class="anchored" data-anchor-id="whats-this-course-about"><span class="header-section-number">2</span> What’s this course about?</h2>
+<section id="whats-this-course-about" class="level2" data-number="3">
+<h2 data-number="3" class="anchored" data-anchor-id="whats-this-course-about"><span class="header-section-number">3</span> What’s this course about?</h2>
 <ul>
 <li>In 200B, we learn the linear models in the form <span class="math display">\[
 y = \beta_0 + \beta_1 x_1 + \cdots + \beta_p x_p + \epsilon,
@@ -3278,8 +3327,8 @@ y = \beta_0 + \beta_1 x_1 + \cdots + \beta_p x_p + \epsilon,
 </ol></li>
 </ul>
 </section>
-<section id="course-description" class="level2" data-number="3">
-<h2 data-number="3" class="anchored" data-anchor-id="course-description"><span class="header-section-number">3</span> Course description</h2>
+<section id="course-description" class="level2" data-number="4">
+<h2 data-number="4" class="anchored" data-anchor-id="course-description"><span class="header-section-number">4</span> Course description</h2>
 <ul>
 <li><p>Read <a href="https://ucla-biostat-200c.github.io/2025spring/syllabus/syllabus.html">syllabus</a> and <a href="https://ucla-biostat-200c.github.io/2025spring/schedule/schedule.html">schedule</a> for a tentative list of topics and course logistics.</p></li>
 <li><p>Teaching philosophy. Usually a GLM course is taught on blackboard/whiteboard with mostly math derivations. In this course, I will start from R code and then explain the theory behind it.</p></li>
